The world chunk data storage system has been slightly refactored. Now, instead of saves/worldname/ c_x_y.dat and world.dat, it's:
saves/worldname/ world.dat and /dimensions/ [folders with dimension names] /region/c_x_y.dat

Adding new parameters to world.dat has been made easier, allowing for saving and loading, even with support for lists of objects.

First version of the luncher with features for downloading built versions from the cloud